--- a/frontend/src/Styles/ContactUs.module.css
+++ b/frontend/src/Styles/ContactUs.module.css
@@ -1,5 +1,5 @@
 .SubmitBtn{
-    opacity: 0.7;
+    opacity: 0.9;
     box-sizing: content-box;
     transition: all 0.3s ease;
     width: 10em;
@@ -7,13 +7,15 @@
     padding: 8px 0;
     text-align: center;
     border-radius: 30px;
-    border: 1.5px solid antiquewhite;
+    border: 2px solid antiquewhite;
     background: linear-gradient(130deg, black 5%,indigo 70%, purple 110%, red 120% );
 }
 
 .SubmitBtn:hover{
-    transform: scalex(1.03);
+    transform: scalex(1.05);
     opacity: 1;
+    /* color: greenyellow; */
+    /* border-color: greenyellow; */
 }
 
 .FooterDiv{
