--- a/frontend/src/Styles/Navbar.module.css
+++ b/frontend/src/Styles/Navbar.module.css
@@ -1,12 +1,36 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Prompt:wght@400;600&family=Roboto:wght@400;700&display=swap');
+/* @import url('//fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Prompt:wght@400;600&family=Roboto:wght@400;700&display=swap'); */
 
 
-:root{
+/* :root{
     --bs-border-radius: 0.775rem;
+} */
+
+/* body{
+    font-family: "Prompt",sans-serif;
+} */
+.Toggler{
+    border-radius: 0.775rem;
 }
 
-body{
-    font-family: "Prompt",sans-serif;
+.Registerbtn{
+    color: antiquewhite;
+    text-decoration: none;
+    opacity: 0.8;
+    transition: all 0.3s ease;
+    margin-top: 50px;
+    padding: 2px 25px;
+    text-align: center;
+    border-radius: 30px;
+    border: 1.5px solid antiquewhite;
+    background: linear-gradient(130deg, black 5%,indigo 70%, purple 110%, red 120% );
+}
+
+.Registerbtn:hover{
+    color: goldenrod;
+    cursor: pointer;
+    transform: scale(1.5);
+    opacity: 1;
+    border:1.5px solid goldenrod;
 }
 
 .Stickybtn{
@@ -40,6 +64,11 @@ body{
 
 
 @media only screen and (max-width : 991.5px){
+    .Registerbtn{
+        opacity: 1;
+        background-image: linear-gradient( 0deg,  #000000 38.2%,  #380557 138.2% );
+    }
+
     .Stickybtn{
         background-color:rgba(87, 0, 128, 0.655);
         width: 35px;
