--- a/frontend/src/Styles/Home.module.css
+++ b/frontend/src/Styles/Home.module.css
@@ -1,7 +1,7 @@
 @import url('//fonts.googleapis.com/css2?family=Montserrat:wght@400;550;600;700;800;900&family=Poppins:wght@300;400;500;600;700&family=Prompt:wght@400;650;700;800&family=Roboto:wght@400;700&display=swap');
 
 *{  
-    border-radius: 0.775rem;
+    /* border-radius: 0.775rem; */
     font-family: 'Prompt',sans-serif;
     font-weight: 400;
     color: antiquewhite;
