--- a/frontend/src/Styles/Home.module.css
+++ b/frontend/src/Styles/Home.module.css
@@ -40,7 +40,7 @@
     width: 100vw;
     text-align: center;
     /* font-family: 'Montserrat'; */
-    font-size: 7.5vw;
+    font-size: 7.8vw;
     line-height: 1.2em;
     overflow:visible;
     animation:forwards;
@@ -67,6 +67,7 @@
 }
 
 .aboutContent{
+    font-size: 0.95rem;
     color: whitesmoke;
     text-align: justify;
     margin: 6vw;
@@ -121,11 +122,34 @@
     width: 100vw;
 }
 
+.prizepooldiv{
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    font-size: 2em;
+    display: flex;
+    flex-direction: row !important;
+    justify-content: center;
+    gap: 20px;
+}
+.prizepooldiv :nth-child(1){
+    color: Goldenrod;
+    font-weight: 700;
+    font-size: larger;
+}
+.prizepooldiv :nth-child(2){
+    display: flex;
+    flex-direction: row;
+    font-weight: 600;
+    font-stretch: expanded;
+    /* color: red; */
+    align-items: center;
+}
+
 
 
 @media only screen and (min-width : 800px){
     .aboutContent{
-        font-size: 1.1rem;
+        font-size: 1.3rem;
     }
 
     .homecontentDiv{
@@ -138,7 +162,7 @@
     }
 
     .homediv{
-    background: url(../Components/BG/astrobg4edit2.png);
+    background: url(../Components/BG/Homepagebg.jpg);
     align-items: center;
     background-blend-mode:darken;
     background-repeat: no-repeat;
@@ -170,6 +194,12 @@
     .FooterFont{
         width: 70vw;
     }
+
+    
+    .prizepooldiv{
+        font-size: 4rem;
+        gap: 30px;
+    }
 }
 
 
@@ -190,6 +220,7 @@
         gap: 2px;
         padding-top: 10px !important;
     }
+
 }
 
 
