--- a/frontend/src/Styles/Home.module.css
+++ b/frontend/src/Styles/Home.module.css
@@ -98,7 +98,7 @@
 .FooterDiv{
     margin-top: 15px;
     flex-direction: column;
-    font-size: 1.7rem;
+    /* font-size: 120%; */
     border-top: 1.5px solid gray;
     display: flex;
     justify-content: center;
@@ -106,6 +106,7 @@
     width: 94vw;
     padding: 3vh;
 }
+
 
 .FooterFont{
     font-size: 0.7rem;
@@ -117,7 +118,7 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 1vw 3.5vw ;
-    margin-top: 30px;
+    margin-top: 15px;
     font-size: 0.8rem;
     width: 100vw;
 }
@@ -132,7 +133,7 @@
     gap: 20px;
 }
 .prizepooldiv :nth-child(1){
-    color: Goldenrod;
+    /* color: Goldenrod; */
     font-weight: 700;
     font-size: larger;
 }
@@ -141,9 +142,10 @@
     flex-direction: row;
     font-weight: 600;
     font-stretch: expanded;
-    /* color: red; */
+    color: "white" !important;
     align-items: center;
 }
+
 
 
 
