--- a/frontend/src/Styles/Home.module.css
+++ b/frontend/src/Styles/Home.module.css
@@ -1,7 +1,6 @@
 @import url('//fonts.googleapis.com/css2?family=Montserrat:wght@400;550;600;700;800;900&family=Poppins:wght@300;400;500;600;700&family=Prompt:wght@400;650;700;800&family=Roboto:wght@400;700&display=swap');
 
 *{  
-    /* border-radius: 0.775rem; */
     font-family: 'Prompt',sans-serif;
     font-weight: 400;
     color: antiquewhite;
@@ -124,8 +123,8 @@
 }
 
 .prizepooldiv{
-    margin-top: 5vh;
-    margin-bottom: 5vh;
+    margin-top: 3vh;
+    margin-bottom: 1vh;
     font-size: 2em;
     display: flex;
     flex-direction: row !important;
@@ -133,7 +132,6 @@
     gap: 20px;
 }
 .prizepooldiv :nth-child(1){
-    /* color: Goldenrod; */
     font-weight: 700;
     font-size: larger;
 }
@@ -144,6 +142,14 @@
     font-stretch: expanded;
     color: "white" !important;
     align-items: center;
+}
+
+.logos{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width : 15%;
 }
 
 
@@ -199,6 +205,7 @@
 
     
     .prizepooldiv{
+        margin-top: 5vh;
         font-size: 4rem;
         gap: 30px;
     }
@@ -221,6 +228,13 @@
         flex-direction: column !important;
         gap: 2px;
         padding-top: 10px !important;
+    }
+
+    .logos{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width : 35%
     }
 
 }
